# llama_boy

./: .gitignore  Cargo.toml  justfile  llamaboy.savestate
assets/: move_list.csv
back_end/: Cargo.toml
back_end/src/: main.rs
back_end/src/ai/: gen_config_builder.rs  mod.rs  model.rs  prompt_builder.rs  session.rs
back_end/src/domain/: emulator.rs  emulator_cmd.rs  mod.rs
back_end/src/domain/emulator/: commands.rs  engine.rs  mod.rs  queries.rs
back_end/src/domain/emulator/pkmn_fire_red/memory/: memory.rs  mod.rs  pkmns.rs  read.rs
back_end/src/domain/emulator/pkmn_fire_red/memory/pokemon/: battle.rs  list.rs  mod.rs  moves.rs  party.rs
back_end/src/infrastructure/emulator/: builder.rs
back_end/src/io/: mod.rs  server.rs
back_end/src/io/channels/: command.rs  memory.rs  mod.rs  video.rs
core/: Cargo.toml
core/src/: gba.rs  sysbus.rs
core/src/sound/: interface.rs
front_end/: Cargo.toml  LICENSE-MIT  README.md  index.html
front_end/src/: main.rs
front_end/src/components/: app.rs  canvas.rs  deck_view.rs  gba_screen.rs  json_tree.rs  memory.rs  mod.rs  pokemon.rs
