[workspace]
members = ["front_end", "back_end"]
exclude = ["core", "arm7tdmi", "utils"]
default-members = ["front_end"]

[profile.dev]
opt-level = 2
debug = 2

[profile.release]
debug = 0

[profile.release-dev]
opt-level = 3
debug = 2
debug-assertions = false
inherits = "release"

[profile.release-lto]
lto = true
inherits = "release"
