[package]
name = "back_end"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = '../core' }
axum = {version = "0.8.3",features = ["ws"]}
futures-util = "0.3.31"
tokio ={ version = "1.44.2",  features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
anyhow = "1.0.98"
base64 = "0.22.1"
serde = "1.0.219"
serde_json = "1.0.140"
bit = "0.1.1"
llama-cpp-2 = "0.1.102"
thiserror = "2.0.12"
csv = "1.3.1"

